[package]
name = "pretty_toa"
version = "0.1.1"
authors = ["gmelman <gmelman1@gmail.com>"]
description = "Fast convert (using itoa/dtoa) numbers to strings with thousands separators"
repository="https://github.com/gabime/pretty_toa"
keywords = ["format", "itoa", "pretty", "numbers"]
categories = ["value-formatting"]
readme = "README.md"

license = "MIT"

[dependencies]
num-traits = "^0.1"
itoa = "^0.3"
dtoa = "0.4"
